--- a/Android/udpSocket/app/src/main/res/layout/activity_udp.xml
+++ b/Android/udpSocket/app/src/main/res/layout/activity_udp.xml
@@ -8,6 +8,13 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".UdpActivity">
 
+    <EditText android:id="@+id/edit_address"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/default_ip"
+        android:hint="@string/edit_address" />
+
+
     <EditText android:id="@+id/edit_port"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
