--- a/Android/udpSocket/app/src/main/res/layout/activity_create.xml
+++ b/Android/udpSocket/app/src/main/res/layout/activity_create.xml
@@ -1,13 +1,12 @@
+<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.fi.uba.udpsocket.login.LoginActivity">
+    android:paddingBottom="@dimen/activity_vertical_margin">
 
     <EditText
         android:id="@+id/username_text"
@@ -22,29 +21,17 @@
         android:layout_height="wrap_content"
         android:hint="@string/password_placeholder" />
 
-    <Button
+    <EditText
+        android:id="@+id/repeat_password_text"
+        android:inputType="textPassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/button_login"
-        android:onClick="login"/>
+        android:hint="@string/repeat_password_placeholder" />
 
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/button_create_account"
         android:onClick="createAccount"/>
-
-    <TextView
-        android:id="@+id/json_response_text"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        />
-
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:src="@drawable/logotix"
-        android:visibility="invisible"
-        />
 
 </LinearLayout>
