Added temporary web view with crate account screen.

--- a/Android/udpSocket/app/src/main/res/values/config.xml
+++ b/Android/udpSocket/app/src/main/res/values/config.xml
@@ -2,5 +2,6 @@
 <resources>
 
     <string name="tix_base_url">http://tix.innova-red.net</string>
+    <string name="tix_create_url">bin/account/register</string>
 
 </resources>
