--- a/Android/udpSocket/app/src/main/res/layout/activity_installations.xml
+++ b/Android/udpSocket/app/src/main/res/layout/activity_installations.xml
@@ -17,6 +17,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/button_create_installation"
+        android:onClick="createInstallation"/>
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
