--- a/Android/udpSocket/app/src/main/res/layout/activity_login.xml
+++ b/Android/udpSocket/app/src/main/res/layout/activity_login.xml
@@ -7,7 +7,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.fi.uba.udpsocket.login.LoginActivity">
+    tools:context="com.fi.uba.udpsocket.screens.login.LoginActivity">
 
     <EditText
         android:id="@+id/username_text"
