Finished with rsa keys. Added spongy castle to manage Pem and pksc1 formats. Organized imports.

--- a/Android/udpSocket/app/src/main/res/layout/activity_installations.xml
+++ b/Android/udpSocket/app/src/main/res/layout/activity_installations.xml
@@ -24,6 +24,11 @@
         android:onClick="createInstallation"/>
 
     <TextView
+        android:id="@+id/test_result"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/current_installations_label"/>
@@ -32,6 +37,5 @@
         android:id="@+id/installations_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
-
 
 </LinearLayout>
