--- a/Android/udpSocket/app/src/main/res/layout/activity_udp.xml
+++ b/Android/udpSocket/app/src/main/res/layout/activity_udp.xml
@@ -32,6 +32,12 @@
         android:text="@string/button_send"
         android:onClick="sendMessage"/>
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/button_create_installation"
+        android:onClick="createInstallation"/>
+
     <Button android:id="@+id/btnStartService"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
