Working on log files.

--- a/Android/udpSocket/app/src/main/res/layout/activity_udp.xml
+++ b/Android/udpSocket/app/src/main/res/layout/activity_udp.xml
@@ -24,7 +24,8 @@
     <EditText android:id="@+id/edit_message"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:hint="@string/edit_message" />
+        android:hint="@string/edit_message_hint"
+        android:text="@string/edit_message"/>
 
     <Button
         android:layout_width="wrap_content"
