Added splash screen. Show login screen if there is no installation. Started with current installation screen.

--- a/Android/udpSocket/app/src/main/res/layout/activity_installations.xml
+++ b/Android/udpSocket/app/src/main/res/layout/activity_installations.xml
@@ -15,7 +15,8 @@
     <EditText
         android:id="@+id/installation_name_text"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:hint="@string/new_installation_hint" />
 
     <Button
         android:layout_width="match_parent"
@@ -38,4 +39,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/button_stop_service"
+        android:onClick="stopService"/>
 </LinearLayout>
