Add button to stop the service from current installation screen. Set tix server ip.

--- a/Android/udpSocket/app/src/main/res/layout/activity_current_installation.xml
+++ b/Android/udpSocket/app/src/main/res/layout/activity_current_installation.xml
@@ -9,4 +9,9 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.fi.uba.udpsocket.screens.installations.CurrentInstallationActivity">
 
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/button_stop_service"
+        android:onClick="stopService"/>
 </RelativeLayout>
