Add preferences to track the amount of sent packets and the detected timeouts.

--- a/Android/udpSocket/app/src/main/res/values/constants.xml
+++ b/Android/udpSocket/app/src/main/res/values/constants.xml
@@ -2,4 +2,7 @@
 <resources>
     <string name="preferences_name">InstallationPreferences</string>
     <string name="installation_key">Installation</string>
+    <string name="timeout_key">Timeouts</string>
+    <string name="packet_key">Packets</string>
+
 </resources>
