--- a/Android/udpSocket/app/src/main/res/layout/activity_current_installation.xml
+++ b/Android/udpSocket/app/src/main/res/layout/activity_current_installation.xml
@@ -21,8 +21,16 @@
         android:onClick="deleteCurrentInstallation"/>
 
     <Button
+        android:id="@+id/stop_service_action"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/button_stop_service"
         android:onClick="stopService"/>
+
+    <Button
+        android:id="@+id/start_service_action"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/button_start_service"
+        android:onClick="startService"/>
 </LinearLayout>
